# qubership-git-system-follower

./: .gitignore  README.md  devbox.json  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: checks.yaml  packaging.yaml  release.yaml
devbox/: docker-compose.yml  nginx.conf
devbox/scripts/nexus/: change-password.sh  create-docker-registries.sh  generate-certs.sh  wait.sh
docs/: api_reference.md  cli_reference.md  concepts.md  docs_home.md  getting_started.md  home.md  how_to.md  index.md
docs/api_reference/: develop_interface.md  index.md
docs/api_reference/develop_interface/: cicd_variables.md  index.md  templates.md  types.md
docs/cli_reference/: download.md  index.md  install.md  list.md  uninstall.md  version.md
docs/concepts/: api_version_list.md  gears.md  index.md  plugins.md  state.md
docs/concepts/api_version_list/: index.md  v1.md
docs/concepts/plugins/: cli_arguments.md  index.md
docs/getting_started/: index.md  installation.md  quickstart.md
docs/how_to/: build.md  gear_development_cases.md  index.md  integration_with_semantic_release.md
git_system_follower/: cli.py  download.py  logger.py
git_system_follower/package/: package_info.py  script.py
git_system_follower/package_manager/: __init__.py  cli.py  download.py  install.py  states.py  uninstall.py
git_system_follower/package_manager/git_api/: git_api.py  gitlab_api.py  utils.py
git_system_follower/typings/: cli.py
git_system_follower/utils/: cli.py  output.py
requirements/: requirements.txt
tests/: test_temporary_plug.py
(+16 files in other folders)
